# openenv-agent

./: .dockerignore  .env.example  .gitignore  ACTIONABLE_FIXES.md  AI_TRAINING_IMPROVEMENTS.md  ANALYSIS_REPORT.md  BUGS_FIXED.md  CODE_REVIEW_ANALYSIS.md  COMPLETION_SUMMARY.md  COMPREHENSIVE_REVIEW.md  CONSISTENCY_FIXES_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_READY.txt  DEPLOYMENT_SUMMARY.md  DETAILED_CHANGES.md  DETAILED_FIX_REPORT.md  Dockerfile  Dockerfile.streamlit  ENVIRONMENT_SETUP.md  EVALUATOR_CHECKLIST.md  FINAL_VERIFICATION_REPORT.md  FIXES_APPLIED.md  HF_SPACES_SETUP.md  HONEST_AUDIT_REPORT.md  HONEST_README.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TESTS_COMPLETE.md  MAIN_USAGE.md  PRODUCTION_DEPLOYMENT_STATUS.txt  QUICKREF.md  QUICK_START_STREAMLIT.md  README.md  README_PRODUCTION.md  SPEC_COMPLIANCE.md  STREAMLIT_GUIDE.md  STREAMLIT_SETUP.md  SUBMISSION_CHECKLIST.md  SUBMISSION_GUIDE.md  SUBMISSION_REPORT.json  (+62 more)
.streamlit/: config.toml
customer_support_env/: __init__.py  baseline.py  curriculum_manager.py  data.py  environment.py  graders.py  models.py  openai_integration.py  openenv_compat.py  reward_config.py  rule_based_grader.py  semantic_evaluator.py  synthetic_generator.py
evals/: test_chain_of_thought.py  test_difficulty_comprehensive.py  test_difficulty_levels.py  test_gradient_penalty.py  test_improved_training.py  test_temperature_corrected.py
files/: .env.example  Dockerfile  README.md  app.py  data.py  inference.py  openenv.yaml  requirements.txt
scripts/: validate-submission.ps1  validate-submission.sh
(+12 files in other folders)
