[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "customer-support-openenv"
version = "0.1.0"
description = "OpenEnv customer support triage environment"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "OpenEnv Hackathon Team"}
]
dependencies = [
  "openenv-core>=0.2.0",
  "fastapi>=0.104.0",
  "uvicorn[standard]>=0.24.0",
  "pydantic>=2.0.0",
  "websockets>=11.0",
  "openai>=1.0.0",
  "httpx>=0.25.0",
  "python-dotenv>=1.0.0",
  "pyyaml>=6.0"
]

[project.scripts]
server = "server.app:main"
